--- a/src/design/admin.ui
+++ b/src/design/admin.ui
@@ -505,7 +505,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="statistics_sales_button">
             <property name="text">
              <string>Статистика продаж</string>
             </property>
